--- a/BullsEye/BullsEye/highscorelist.plist
+++ b/BullsEye/BullsEye/highscorelist.plist
@@ -1,14 +1,156 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <array>
-        <dict>
-            <key>highscore</key>
-            <integer>123</integer>
-        </dict>
-        <dict>
-            <key>highscore</key>
-            <integer>456</integer>
-        </dict>
-    </array>
+<array>
+	<dict>
+		<key>rounds</key>
+		<string>1</string>
+		<key>number</key>
+		<integer>0</integer>
+		<key>highscore</key>
+		<integer>1</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>1</string>
+		<key>number</key>
+		<integer>1</integer>
+		<key>highscore</key>
+		<integer>2</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>1</string>
+		<key>number</key>
+		<integer>2</integer>
+		<key>highscore</key>
+		<integer>3</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>1</string>
+		<key>number</key>
+		<integer>3</integer>
+		<key>highscore</key>
+		<integer>4</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>1</string>
+		<key>number</key>
+		<integer>4</integer>
+		<key>highscore</key>
+		<integer>5</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>5</string>
+		<key>number</key>
+		<integer>0</integer>
+		<key>highscore</key>
+		<integer>6</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>5</string>
+		<key>number</key>
+		<integer>1</integer>
+		<key>highscore</key>
+		<integer>7</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>5</string>
+		<key>number</key>
+		<integer>2</integer>
+		<key>highscore</key>
+		<integer>8</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>5</string>
+		<key>number</key>
+		<integer>3</integer>
+		<key>highscore</key>
+		<integer>9</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>5</string>
+		<key>number</key>
+		<integer>4</integer>
+		<key>highscore</key>
+		<integer>10</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>10</string>
+		<key>number</key>
+		<integer>0</integer>
+		<key>highscore</key>
+		<integer>11</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>10</string>
+		<key>number</key>
+		<integer>1</integer>
+		<key>highscore</key>
+		<integer>12</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>10</string>
+		<key>number</key>
+		<integer>2</integer>
+		<key>highscore</key>
+		<integer>13</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>10</string>
+		<key>number</key>
+		<integer>3</integer>
+		<key>highscore</key>
+		<integer>14</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+	<dict>
+		<key>rounds</key>
+		<string>10</string>
+		<key>number</key>
+		<integer>4</integer>
+		<key>highscore</key>
+		<integer>15</integer>
+		<key>date</key>
+		<string>22-04-2013</string>
+	</dict>
+</array>
 </plist>
