--- a/BullsEye/BullsEye/BullsEye-Info.plist
+++ b/BullsEye/BullsEye/BullsEye-Info.plist
@@ -20,7 +20,7 @@
 		<string>Icon-Small-50@2x.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.mpruijssers.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>nl.mprog.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
